src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;400;500;800;900&display=swap');

html, body {
  background-color: #623cea;
}

body {
  padding: 5em;
  font-family: 'Roboto Serif', 'Georgia', serif;
}

.header {
  color: #FEFEFE;
  font-weight: 800;
  margin-bottom: 1em;
}

p {
  color: 'grey';
  font-weight: 200;
}

a {
  color: #623cea;
  font-weight: 500;
}

input {
  text-align: center;
  margin-bottom: 2em;
}

label {
  color: #FEFEFE;
  font-weight: 400;
}

.container {
  text-align: center;
  background-color: #623cea;
}

.bold {
  font-weight: 500;
}

.avatar-sm {
  height: 100px;
  width: 100px;
  margin-bottom: 1em;
  -webkit-box-shadow: 4px 8px 15px -3px #BEBEBE; 
  box-shadow: 4px 8px 15px -3px #BEBEBE;
}

.avatar-img {
  -o-object-fit: cover;
  object-fit: cover;
}

.details {
  margin-bottom: 1em;
  font-weight: 500;
}

.form-input-container {
  display: flex;
}

.submit-btn {
  font-weight: 500;
  margin-right: 2em;
}

.film-list {
  margin-bottom: 1em
}

/* CSSTransition */
.toggle-in-enter {
  opacity: 0;
}

.toggle-in-enter-active {
  opacity: 1;
  transition: opacity 500ms;
}

.toggle-out-exit {
  opacity: 1;
}

.toogle-out-exit-active {
  opacity: 0;
  transform: scale(0.9);
  transition: opacity 300ms, transform 300ms; 
}

